<resources>
    <string name="app_name">Premier Football League</string>
    <string name="action_settings">Settings</string>

    <string name="title_permission_required">Permission Required</string>
    <string name="message_need_permission">We need %1$s permissions</string>
    <string name="btn_go_to_settings">GO TO SETTINGS</string>
    <string name="btn_ok">OK</string>
    <string name="btn_no">NO</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="area">Area :&#160;</string>
    <string name="tla">TLA :&#160;</string>
    <string name="address">Address :&#160;</string>
    <string name="phone">Phone :&#160;</string>
    <string name="email">Email :&#160;</string>
    <string name="founded">Founded :&#160;</string>
    <string name="clubColors">Club Colors :&#160;</string>
    <string name="venue">Venue :&#160;</string>
    <string name="website">Website :&#160;</string>

</resources>
