<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="team"
            type="io.orcas.pfl.model.Team" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/team_header_height"
            android:background="@color/white">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="@color/white"
                app:expandedTitleGravity="bottom|center_horizontal"
                app:expandedTitleMarginBottom="@dimen/team_name_margin"
                app:expandedTitleTextAppearance="@style/AppTheme.TeamExpandedTitleAppearance"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/coverImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax" />

                <FrameLayout
                    android:id="@+id/frameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#77000000" />

                <FrameLayout
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="@dimen/back_button_background_margin_start"
                    android:layout_marginTop="@dimen/back_button_background_margin_top"
                    android:background="@drawable/circle_background"
                    app:layout_collapseMode="pin" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/crest_image_view"
                    android:layout_width="112dp"
                    android:layout_height="112dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="@dimen/team_extra_text_margin"
                    android:layout_marginEnd="16dp"
                    app:teamImage="@{team.crestUrl}" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/AppTheme.PopupOverlay"
                    app:title="@{team.name}" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            app:behavior_overlapTop="@dimen/team_details_overlapTop_height"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_margin="@dimen/team_details_card_margin"
                app:cardElevation="@dimen/team_details_card_elevation"
                app:cardUseCompatPadding="true"
                app:contentPadding="@dimen/team_details_card_contentPadding">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/team_details_title_height"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:maxLines="2"
                        android:textColor="@color/primaryText"
                        android:textSize="@dimen/team_details_title_text_size"
                        tools:text="@{team.name}" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="@{team.area==null ? View.GONE : View.VISIBLE}">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/Field.Header"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/area" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/area"
                            style="@style/Field.Details"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="@{team.area.name}" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="@{team.tla==null ? View.GONE : View.VISIBLE}">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/Field.Header"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tla" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tla"
                            style="@style/Field.Details"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="@{team.tla}" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="@{team.address==null ? View.GONE : View.VISIBLE}">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/Field.Header"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/address" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/address"
                            style="@style/Field.Details"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="@{team.address}" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="@{team.phone==null ? View.GONE : View.VISIBLE}">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/Field.Header"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/phone" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/phone"
                            style="@style/Field.Details"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="@{team.phone}" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="@{team.email==null ? View.GONE : View.VISIBLE}">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/Field.Header"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/email" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/email"
                            style="@style/Field.Details"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="@{team.email}" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="@{team.founded==null ? View.GONE : View.VISIBLE}">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/Field.Header"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/founded" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/founded"
                            style="@style/Field.Details"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="@{team.founded.toString()}" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="@{team.clubColors==null ? View.GONE : View.VISIBLE}">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/Field.Header"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/clubColors" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/clubColors"
                            style="@style/Field.Details"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="@{team.clubColors}" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="@{team.venue==null ? View.GONE : View.VISIBLE}">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/Field.Header"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/venue" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/venue"
                            style="@style/Field.Details"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="@{team.venue}" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="@{team.website==null ? View.GONE : View.VISIBLE}">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/Field.Header"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/website" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/website"
                            style="@style/Field.Details"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autoLink="web"
                            tools:text="@{team.website}" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>